--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -11,6 +11,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 0: Colab env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Upload requirements.txt\n",
+    "from google.colab import files\n",
+    "uploaded = files.upload()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1: Import Libraries and Set Up the Environment\n",
     "Starting with libs and setting up device. If possible use GPU"
    ]
