--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 0: Colab env"
+    "## Step 0: Colab env\n",
+    "Uploading and installing dependencies"
    ]
   },
   {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +192,8 @@
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "#Create DataLoader to batch and shuffle the data using mulitprocessing\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=64, shuffle=True)\n",
-    "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False)"
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=64, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False, num_workers=4, pin_memory=True)"
    ]
   },
   {
@@ -226,7 +227,7 @@
     "# Create a KAN model\n",
     "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
     "#Grid = 5, k = 3, seed = 42\n",
-    "model = KAN(width=[784, 128, 64, 10], grid=5, k=3, seed=42, device=device)\n",
+    "model = KAN(width=[784, 128, 64, 10], grid=5, k=3, seed=43, device=device)\n",
     "\n",
     "# Move the model to the specified device\n",
     "model = model.to(device)"
@@ -285,7 +286,9 @@
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
-    "    for images, labels in train_loader:\n",
+    "    \n",
+    "    # Adding tqdm progress bar for each epoch\n",
+    "    for images, labels in tqdm(train_loader, desc=f'Epoch [{epoch+1}/{num_epochs}]'):\n",
     "        images = images.view(images.size(0), -1).to(device)  # Flatten the images\n",
     "        labels = labels.to(device)\n",
     "\n",
@@ -302,7 +305,7 @@
     "\n",
     "        running_loss += loss.item()\n",
     "\n",
-    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader):.4f}')\n"
+    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader):.4f}')"
    ]
   },
   {
@@ -319,11 +322,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluation\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    correct = 0\n",
     "    total = 0\n",
+    "    \n",
     "    for images, labels in test_loader:\n",
     "        images = images.view(images.size(0), -1).to(device)\n",
     "        labels = labels.to(device)\n",
@@ -332,7 +335,8 @@
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    print(f'Accuracy on test set: {100 * correct / total:.2f}%')\n"
+    "    accuracy = 100 * correct / total\n",
+    "    print(f'Accuracy on test set: {accuracy:.2f}%')"
    ]
   }
  ],
