--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KAN THESIS"
+    "KAN THESIS\n",
+    "This here is basic start of KAN"
    ]
   },
   {
@@ -192,7 +193,7 @@
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "#Create DataLoader to batch and shuffle the data using mulitprocessing\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=64, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=128, shuffle=True, num_workers=4, pin_memory=True)\n",
     "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False, num_workers=4, pin_memory=True)"
    ]
   },
@@ -226,11 +227,9 @@
    "source": [
     "# Create a KAN model\n",
     "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
-    "#Grid = 5, k = 3, seed = 42\n",
-    "model = KAN(width=[784, 128, 64, 10], grid=5, k=3, seed=43, device=device)\n",
-    "\n",
-    "# Move the model to the specified device\n",
-    "model = model.to(device)"
+    "#Grid = 5, k = 3, seed = 42 \n",
+    "#and move model to device\n",
+    "model = KAN(width=[784, 128, 64, 10], grid=5, k=3, seed=42, device=device).to(device)\n"
    ]
   },
   {
@@ -281,18 +280,16 @@
     }
    ],
    "source": [
-    "# Training loop\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
     "    \n",
-    "    # Adding tqdm progress bar for each epoch\n",
+    "    # Using tqdm for progress tracking\n",
     "    for images, labels in tqdm(train_loader, desc=f'Epoch [{epoch+1}/{num_epochs}]'):\n",
     "        images = images.view(images.size(0), -1).to(device)  # Flatten the images\n",
     "        labels = labels.to(device)\n",
     "\n",
-    "        # Zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
     "        # Forward pass\n",
@@ -305,6 +302,7 @@
     "\n",
     "        running_loss += loss.item()\n",
     "\n",
+    "    # Print the average loss for this epoch\n",
     "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader):.4f}')"
    ]
   },
@@ -323,20 +321,20 @@
    "outputs": [],
    "source": [
     "model.eval()\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
     "with torch.no_grad():\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    \n",
     "    for images, labels in test_loader:\n",
     "        images = images.view(images.size(0), -1).to(device)\n",
     "        labels = labels.to(device)\n",
     "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    accuracy = 100 * correct / total\n",
-    "    print(f'Accuracy on test set: {accuracy:.2f}%')"
+    "accuracy = 100 * correct / total\n",
+    "print(f'Accuracy on test set: {accuracy:.2f}%')"
    ]
   }
  ],
