--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -280,30 +280,73 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Assuming you track loss and accuracy in lists during training\n",
+    "train_losses = []\n",
+    "test_accuracies = []\n",
+    "\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
     "    \n",
-    "    # Using tqdm for progress tracking\n",
     "    for images, labels in tqdm(train_loader, desc=f'Epoch [{epoch+1}/{num_epochs}]'):\n",
-    "        images = images.view(images.size(0), -1).to(device)  # Flatten the images\n",
+    "        images = images.view(images.size(0), -1).to(device)\n",
     "        labels = labels.to(device)\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "\n",
-    "        # Forward pass\n",
     "        outputs = model(images)\n",
     "        loss = criterion(outputs, labels)\n",
-    "\n",
-    "        # Backward pass and optimization\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
     "\n",
-    "    # Print the average loss for this epoch\n",
-    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader):.4f}')"
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    # Save training loss\n",
+    "    train_losses.append(running_loss / len(train_loader))\n",
+    "    # Evaluate the model\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in test_loader:\n",
+    "            images = images.view(images.size(0), -1).to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    test_accuracy = 100 * correct / total\n",
+    "    test_accuracies.append(test_accuracy)\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "\n",
+    "# Loss Plot\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(range(1, num_epochs+1), train_losses, label='Training Loss')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Training Loss over Epochs')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Accuracy Plot\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(range(1, num_epochs+1), test_accuracies, label='Test Accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy (%)')\n",
+    "plt.title('Test Accuracy over Epochs')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -320,21 +363,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visualize a few test set predictions\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "model.eval()\n",
-    "correct = 0\n",
-    "total = 0\n",
+    "images, labels = next(iter(test_loader))\n",
+    "images = images.view(images.size(0), -1).to(device)\n",
+    "labels = labels.to(device)\n",
+    "outputs = model(images)\n",
+    "_, predicted = torch.max(outputs, 1)\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    for images, labels in test_loader:\n",
-    "        images = images.view(images.size(0), -1).to(device)\n",
-    "        labels = labels.to(device)\n",
-    "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
+    "# Show a few images and their predictions\n",
+    "images = images.view(-1, 28, 28).cpu().numpy()\n",
+    "labels = labels.cpu().numpy()\n",
+    "predicted = predicted.cpu().numpy()\n",
     "\n",
-    "accuracy = 100 * correct / total\n",
-    "print(f'Accuracy on test set: {accuracy:.2f}%')"
+    "fig, axes = plt.subplots(2, 5, figsize=(12, 5))\n",
+    "for i, ax in enumerate(axes.flat):\n",
+    "    ax.imshow(images[i], cmap='gray')\n",
+    "    ax.set_title(f'Pred: {predicted[i]}, True: {labels[i]}')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.show()\n"
    ]
   }
  ],
