--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -281,6 +281,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Assuming you track loss and accuracy in lists during training\n",
     "train_losses = []\n",
