--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -193,7 +193,7 @@
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "#Create DataLoader to batch and shuffle the data using mulitprocessing\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=512, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=2048, shuffle=True, num_workers=4, pin_memory=True)\n",
     "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False, num_workers=4, pin_memory=True)"
    ]
   },
@@ -229,7 +229,7 @@
     "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
     "#Grid = 5, k = 3, seed = 42 \n",
     "#and move model to device\n",
-    "model = KAN(width=[784, 64, 32, 10], grid=5, k=3, seed=42, device=device).to(device)\n"
+    "model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n"
    ]
   },
   {
@@ -248,7 +248,8 @@
    "source": [
     "# Define loss function and optimizer // think about this params and below\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.002)\n",
+    " #from 0.001"
    ]
   },
   {
@@ -258,6 +259,24 @@
     "## Step 5: Train the Model\n",
     "This cell contains the training loop where the model is trained for a specified number of epochs. \n",
     "The loss is printed after each epoch to monitor the training process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'nvidia-smi' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
    ]
   },
   {
@@ -282,10 +301,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from torch.cuda.amp import GradScaler, autocast\n",
     "\n",
     "# Assuming you track loss and accuracy in lists during training\n",
     "train_losses = []\n",
     "test_accuracies = []\n",
+    "scaler = GradScaler()\n",
     "\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
@@ -299,10 +320,16 @@
     "        labels = labels.to(device)\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "\n",
+    "        with autocast():\n",
+    "            outputs = model(images)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "\n",
+    "\n",
+    "        scaler.scale(loss).backward()\n",
+    "        scaler.step(optimizer)\n",
+    "        scaler.update()\n",
+    "\n",
     "\n",
     "        running_loss += loss.item()\n",
     "\n",
