--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -22,18 +22,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Upload requirements.txt\n",
-    "from google.colab import files\n",
-    "uploaded = files.upload()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -r requirements.txt"
+    "!pip install archspec==0.2.3 \\\n",
+    "asttokens==2.4.1 \\\n",
+    "boltons==23.0.0 \\\n",
+    "Brotli==1.0.9 \\\n",
+    "charset-normalizer==2.0.4 \\\n",
+    "colorama==0.4.6 \\\n",
+    "comm==0.2.2 \\\n",
+    "cryptography==42.0.5 \\\n",
+    "decorator==4.4.2 \\\n",
+    "distro==1.9.0 \\\n",
+    "executing==2.0.1 \\\n",
+    "frozendict==2.4.2 \\\n",
+    "idna==3.7 \\\n",
+    "jedi==0.19.1 \\\n",
+    "jsonpatch==1.33 \\\n",
+    "jsonpointer==2.1 \\\n",
+    "nest-asyncio==1.6.0 \\\n",
+    "packaging==23.2 \\\n",
+    "parso==0.8.4 \\\n",
+    "platformdirs==4.2.1 \\\n",
+    "pluggy==1.0.0 \\\n",
+    "pure-eval==0.2.2 \\\n",
+    "pycosat==0.6.6 \\\n",
+    "pycparser==2.21 \\\n",
+    "Pygments==2.18.0 \\\n",
+    "PySocks==1.7.1 \\\n",
+    "requests==2.32.3 \\\n",
+    "ruamel.yaml==0.17.21 \\\n",
+    "stack-data==0.6.3 \\\n",
+    "tqdm==4.66.4 \\\n",
+    "traitlets==5.14.3 \\\n",
+    "truststore==0.8.0 \\\n",
+    "urllib3==2.2.2 \\\n",
+    "zstandard==0.22.0 \\\n",
+    "pykan"
    ]
   },
   {
@@ -63,7 +86,6 @@
     "from torch.utils.data import DataLoader\n",
     "from kan import KAN\n",
     "\n",
-    "# Set default dtype and device\n",
     "torch.set_default_dtype(torch.float64)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f'Using device: {device}')"
