--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -4,14 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KAN THESIS\n",
-    "This here is basic start of KAN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Step 0: Colab env\n",
     "Uploading and installing dependencies"
    ]
@@ -55,8 +47,7 @@
     "traitlets==5.14.3 \\\n",
     "truststore==0.8.0 \\\n",
     "urllib3==2.2.2 \\\n",
-    "zstandard==0.22.0 \\\n",
-    "pykan"
+    "zstandard==0.22.0 \\"
    ]
   },
   {
@@ -76,7 +67,7 @@
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from kan import KAN\n",
+    "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "from torch.cuda.amp import GradScaler, autocast\n",
@@ -90,23 +81,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "torch -> PyTorch deeplearning framework, core funcionality\n",
-    "torchvision -> Utilities for loading and transforming image datasets as MNIST\n",
-    "kan -> Library contating implementation of KAN\n",
-    "I also set a dtype for float64 for bigg precision"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Step 2: Load and Preprocess the MNIST Dataset\n",
     "We're loading MNIST dataset and apply all transformation and normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,42 +111,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ToTensor -> Convert images to PyTorch tensors\n",
-    "Normalize -> Normalizing MNIST dataset using the mean and standard deviation for each channel. This are values specifc for MNIST dataset:\n",
-    "                0.1307 -> Number of mean pixel in all MNIST pictures \n",
-    "                0.3081 -> Standard deviation of pixel for each channel. (Values specific to MNIST)\n",
-    "DataLoader -> Batch_size=2048 -> Size of batch optimize for training \n",
-    "            Shuffle=True -> Data are randomly mixed before each epoch of traing. This make sure that our model does not learn the sequence of data insted of acutal data.\n",
-    "            Num_workser=4 -> Process of loading data is going on 4 threads. It helps to speed up loading time when data are too big or they require time consuming operation\n",
-    "            Pin_memory=True -> It alows data to being passed to RAM (used with GPU training)\n",
-    "Train_loader -> Dataset used for training\n",
-    "Test_loader -> Dataset used for measuering performacne"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3: Initialize the KAN Model\n",
-    "Here we create our KAN model with dimension for MNIST dataset.\n",
+    "## Step 3: Initialize the MLP Model\n",
+    "Here we create our MLP model with dimension for MNIST dataset.\n",
     "Input set is only 784 pixels (images 28x28) and output size is 10\n",
     "Parameters\n",
-    "Hidden layers -> More neurons may risk in overfitting\n",
-    "Grid -> More finner adjustment but more prone to overfitting\n",
+    "\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a KAN model\n",
-    "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
-    "#Grid = 5, k = 3, seed = 42 \n",
-    "#and move model to device\n",
-    "model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n"
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, width):\n",
+    "        super(MLP, self).__init__()\n",
+    "        layers = []\n",
+    "        for i in range(len(width) - 1):\n",
+    "            layers.append(nn.Linear(width[i], width[i+1]))\n",
+    "            if i < len(width) - 2:\n",
+    "                layers.append(nn.ReLU())\n",
+    "        self.network = nn.Sequential(*layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the MLP model\n",
+    "model = MLP(width=[784, 32, 16, 10]).to(device)"
    ]
   },
   {
@@ -178,14 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define loss function and optimizer // think about this params and below\n",
+    "# Define loss function and optimizer\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.002)\n",
-    " #from 0.001"
+    "optimizer = torch.optim.Adam(mlp_model.parameters(), lr=0.002)"
    ]
   },
   {
@@ -212,9 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Assuming you track loss and accuracy in lists during training\n",
+    "# Training loop parameters\n",
     "train_losses = []\n",
     "test_accuracies = []\n",
     "scaler = GradScaler()\n",
@@ -226,7 +204,7 @@
     "    correct = 0\n",
     "    total = 0\n",
     "    \n",
-    "    for images, labels in tqdm(train_loader, desc=f'KAN Epoch [{epoch+1}/{num_epochs}]'):\n",
+    "    for images, labels in tqdm(train_loader, desc=f'MLP Epoch [{epoch+1}/{num_epochs}]'):\n",
     "        images = images.view(images.size(0), -1).to(device)\n",
     "        labels = labels.to(device)\n",
     "\n",
@@ -236,11 +214,9 @@
     "            outputs = model(images)\n",
     "            loss = criterion(outputs, labels)\n",
     "\n",
-    "\n",
     "        scaler.scale(loss).backward()\n",
     "        scaler.step(optimizer)\n",
     "        scaler.update()\n",
-    "\n",
     "\n",
     "        running_loss += loss.item()\n",
     "\n",
@@ -250,6 +226,7 @@
     "\n",
     "    # Save training loss\n",
     "    train_losses.append(running_loss / len(train_loader))\n",
+    "\n",
     "    # Evaluate the model\n",
     "    model.eval()\n",
     "    correct = 0\n",
@@ -266,7 +243,7 @@
     "    test_accuracy = 100 * correct / total\n",
     "    test_accuracies.append(test_accuracy)\n",
     "\n",
-    "    print(f'KAN Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss / len(train_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%')\n",
+    "    print(f'MLP Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss / len(train_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%')\n",
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(12, 4))\n",
@@ -287,7 +264,7 @@
     "plt.title('Test Accuracy over Epochs')\n",
     "plt.legend()\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -332,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kan_env",
+   "display_name": "envKAN",
    "language": "python",
    "name": "python3"
   },
@@ -346,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
