--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -47,7 +47,7 @@
     "traitlets==5.14.3 \\\n",
     "truststore==0.8.0 \\\n",
     "urllib3==2.2.2 \\\n",
-    "zstandard==0.22.0 \\"
+    "zstandard==0.22.0"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "source": [
     "# Define loss function and optimizer\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(mlp_model.parameters(), lr=0.002)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.002)"
    ]
   },
   {
