Optimize for speed

--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -122,8 +122,8 @@
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "#Create DataLoader to batch and shuffle the data using mulitprocessing\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=2048, shuffle=True, num_workers=4, pin_memory=True)\n",
-    "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False, num_workers=4, pin_memory=True)"
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=4096, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=1024, shuffle=False, num_workers=4, pin_memory=True)"
    ]
   },
   {
@@ -165,7 +165,9 @@
     "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
     "#Grid = 5, k = 3, seed = 42 \n",
     "#and move model to device\n",
-    "model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n"
+    "#model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n",
+    "model = KAN(width=[392, 16, 8, 5], grid=5, k=3, seed=42, device=device).to(device)\n",
+    "\n"
    ]
   },
   {
