--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -103,8 +103,8 @@
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "#Create DataLoader to batch and shuffle the data using mulitprocessing\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=2048, shuffle=True, num_workers=4, pin_memory=True)\n",
-    "test_loader = DataLoader(dataset=test_dataset, batch_size=1000, shuffle=False, num_workers=4, pin_memory=True)"
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=4096, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=1024, shuffle=False, num_workers=4, pin_memory=True)"
    ]
   },
   {
@@ -146,7 +146,8 @@
    "outputs": [],
    "source": [
     "# Instantiate the MLP model\n",
-    "model = MLP(width=[784, 32, 16, 10]).to(device)"
+    "#model = MLP(width=[784, 32, 16, 10]).to(device)\n",
+    "model = MLP(width=[392, 16, 8, 5]).to(device)"
    ]
   },
   {
@@ -309,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envKAN",
+   "display_name": "envMLP",
    "language": "python",
    "name": "python3"
   },
