Fix warnging and scale models

--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -165,8 +165,8 @@
     "#Input layer = 784, hidden layer1 = 128, hidden layer2 = 64, output layer = 10\n",
     "#Grid = 5, k = 3, seed = 42 \n",
     "#and move model to device\n",
-    "#model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n",
-    "model = KAN(width=[392, 16, 8, 5], grid=5, k=3, seed=42, device=device).to(device)\n",
+    "model = KAN(width=[784, 32, 16, 10], grid=5, k=3, seed=42, device=device).to(device)\n",
+    "#model = KAN(width=[392, 16, 8, 8], grid=5, k=3, seed=42, device=device).to(device)\n",
     "\n"
    ]
   },
@@ -219,7 +219,7 @@
     "# Assuming you track loss and accuracy in lists during training\n",
     "train_losses = []\n",
     "test_accuracies = []\n",
-    "scaler = GradScaler()\n",
+    "scaler = torch.amp.GradScaler('cuda')\n",
     "\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
@@ -234,7 +234,7 @@
     "\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        with autocast():\n",
+    "        with torch.amp.autocast('cuda'):\n",
     "            outputs = model(images)\n",
     "            loss = criterion(outputs, labels)\n",
     "\n",
