--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -146,8 +146,8 @@
    "outputs": [],
    "source": [
     "# Instantiate the MLP model\n",
-    "#model = MLP(width=[784, 32, 16, 10]).to(device)\n",
-    "model = MLP(width=[392, 16, 8, 5]).to(device)"
+    "model = MLP(width=[784, 32, 16, 10]).to(device)\n",
+    "#model = MLP(width=[392, 16, 8, 7]).to(device)"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "# Training loop parameters\n",
     "train_losses = []\n",
     "test_accuracies = []\n",
-    "scaler = GradScaler()\n",
+    "scaler = torch.amp.GradScaler('cuda')\n",
     "\n",
     "num_epochs = 5\n",
     "for epoch in range(num_epochs):\n",
@@ -211,7 +211,7 @@
     "\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        with autocast():\n",
+    "        with torch.amp.autocast('cuda'):\n",
     "            outputs = model(images)\n",
     "            loss = criterion(outputs, labels)\n",
     "\n",
