--- a/computerVison_Comparasion/MNIST_comparasion.ipynb
+++ b/computerVison_Comparasion/MNIST_comparasion.ipynb
@@ -48,7 +48,7 @@
     "truststore==0.8.0 \\\n",
     "urllib3==2.2.2 \\\n",
     "zstandard==0.22.0 \\\n",
-    "ptflops-0.7.4 \\\n",
+    "ptflops==0.7.4 \\\n",
     "pykan"
    ]
   },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
