--- a/computerVison_Comparasion/MNIST_comparasion.ipynb
+++ b/computerVison_Comparasion/MNIST_comparasion.ipynb
@@ -10,9 +10,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting archspec==0.2.3\n",
+      "  Using cached archspec-0.2.3-py3-none-any.whl.metadata (4.4 kB)\n",
+      "Requirement already satisfied: asttokens==2.4.1 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (2.4.1)\n",
+      "Collecting boltons==23.0.0\n",
+      "  Using cached boltons-23.0.0-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Collecting Brotli==1.0.9\n",
+      "  Using cached Brotli-1.0.9.zip (510 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting charset-normalizer==2.0.4\n",
+      "  Using cached charset_normalizer-2.0.4-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: colorama==0.4.6 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.4.6)\n",
+      "Requirement already satisfied: comm==0.2.2 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.2.2)\n",
+      "Collecting cryptography==42.0.5\n",
+      "  Using cached cryptography-42.0.5-cp39-abi3-win_amd64.whl.metadata (5.4 kB)\n",
+      "Collecting decorator==4.4.2\n",
+      "  Using cached decorator-4.4.2-py2.py3-none-any.whl.metadata (4.2 kB)\n",
+      "Collecting distro==1.9.0\n",
+      "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting executing==2.0.1\n",
+      "  Using cached executing-2.0.1-py2.py3-none-any.whl.metadata (9.0 kB)\n",
+      "Collecting frozendict==2.4.2\n",
+      "  Using cached frozendict-2.4.2-cp312-cp312-win_amd64.whl\n",
+      "Collecting idna==3.7\n",
+      "  Using cached idna-3.7-py3-none-any.whl.metadata (9.9 kB)\n",
+      "Requirement already satisfied: jedi==0.19.1 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.19.1)\n",
+      "Collecting jsonpatch==1.33\n",
+      "  Using cached jsonpatch-1.33-py2.py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting jsonpointer==2.1\n",
+      "  Using cached jsonpointer-2.1-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+      "Requirement already satisfied: nest-asyncio==1.6.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (1.6.0)\n",
+      "Collecting packaging==23.2\n",
+      "  Using cached packaging-23.2-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: parso==0.8.4 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.8.4)\n",
+      "Collecting platformdirs==4.2.1\n",
+      "  Using cached platformdirs-4.2.1-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting pluggy==1.0.0\n",
+      "  Using cached pluggy-1.0.0-py2.py3-none-any.whl.metadata (4.3 kB)\n",
+      "Collecting pure-eval==0.2.2\n",
+      "  Using cached pure_eval-0.2.2-py3-none-any.whl.metadata (6.2 kB)\n",
+      "Collecting pycosat==0.6.6\n",
+      "  Using cached pycosat-0.6.6.tar.gz (71 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting pycparser==2.21\n",
+      "  Using cached pycparser-2.21-py2.py3-none-any.whl.metadata (1.1 kB)\n",
+      "Requirement already satisfied: Pygments==2.18.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (2.18.0)\n",
+      "Collecting PySocks==1.7.1\n",
+      "  Using cached PySocks-1.7.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting requests==2.32.3\n",
+      "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting ruamel.yaml==0.17.21\n",
+      "  Using cached ruamel.yaml-0.17.21-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: stack-data==0.6.3 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.6.3)\n",
+      "Collecting tqdm==4.66.4\n",
+      "  Using cached tqdm-4.66.4-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: traitlets==5.14.3 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (5.14.3)\n",
+      "Collecting truststore==0.8.0\n",
+      "  Using cached truststore-0.8.0-py3-none-any.whl.metadata (4.0 kB)\n",
+      "Collecting urllib3==2.2.2\n",
+      "  Using cached urllib3-2.2.2-py3-none-any.whl.metadata (6.4 kB)\n",
+      "Collecting zstandard==0.22.0\n",
+      "  Using cached zstandard-0.22.0-cp312-cp312-win_amd64.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: ptflops==0.7.4 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.7.4)\n",
+      "Requirement already satisfied: pykan in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (0.2.7)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from asttokens==2.4.1) (1.16.0)\n",
+      "Collecting cffi>=1.12 (from cryptography==42.0.5)\n",
+      "  Using cached cffi-1.17.1-cp312-cp312-win_amd64.whl.metadata (1.6 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests==2.32.3)\n",
+      "  Using cached certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Requirement already satisfied: torch>=2.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from ptflops==0.7.4) (2.5.1)\n",
+      "Requirement already satisfied: filelock in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (3.16.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (4.12.2)\n",
+      "Requirement already satisfied: networkx in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (2024.10.0)\n",
+      "Requirement already satisfied: setuptools in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (75.3.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from torch>=2.0->ptflops==0.7.4) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from sympy==1.13.1->torch>=2.0->ptflops==0.7.4) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\projects\\kan_thesis\\envkan\\lib\\site-packages (from jinja2->torch>=2.0->ptflops==0.7.4) (3.0.2)\n",
+      "Using cached archspec-0.2.3-py3-none-any.whl (65 kB)\n",
+      "Using cached boltons-23.0.0-py2.py3-none-any.whl (194 kB)\n",
+      "Using cached charset_normalizer-2.0.4-py3-none-any.whl (36 kB)\n",
+      "Using cached cryptography-42.0.5-cp39-abi3-win_amd64.whl (2.9 MB)\n",
+      "Using cached decorator-4.4.2-py2.py3-none-any.whl (9.2 kB)\n",
+      "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Using cached executing-2.0.1-py2.py3-none-any.whl (24 kB)\n",
+      "Using cached idna-3.7-py3-none-any.whl (66 kB)\n",
+      "Using cached jsonpatch-1.33-py2.py3-none-any.whl (12 kB)\n",
+      "Using cached jsonpointer-2.1-py2.py3-none-any.whl (7.4 kB)\n",
+      "Using cached packaging-23.2-py3-none-any.whl (53 kB)\n",
+      "Using cached platformdirs-4.2.1-py3-none-any.whl (17 kB)\n",
+      "Using cached pluggy-1.0.0-py2.py3-none-any.whl (13 kB)\n",
+      "Using cached pure_eval-0.2.2-py3-none-any.whl (11 kB)\n",
+      "Using cached pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+      "Using cached PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Using cached requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "Using cached ruamel.yaml-0.17.21-py3-none-any.whl (109 kB)\n",
+      "Using cached tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
+      "Using cached truststore-0.8.0-py3-none-any.whl (16 kB)\n",
+      "Using cached urllib3-2.2.2-py3-none-any.whl (121 kB)\n",
+      "Using cached zstandard-0.22.0-cp312-cp312-win_amd64.whl (511 kB)\n",
+      "Using cached certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
+      "Using cached cffi-1.17.1-cp312-cp312-win_amd64.whl (181 kB)\n",
+      "Building wheels for collected packages: Brotli, pycosat\n",
+      "  Building wheel for Brotli (pyproject.toml): started\n",
+      "  Building wheel for Brotli (pyproject.toml): finished with status 'error'\n",
+      "  Building wheel for pycosat (pyproject.toml): started\n",
+      "  Building wheel for pycosat (pyproject.toml): finished with status 'error'\n",
+      "Failed to build Brotli pycosat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Building wheel for Brotli (pyproject.toml) did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [26 lines of output]\n",
+      "      C:\\Users\\how2t\\AppData\\Local\\Temp\\pip-build-env-e18zd744\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\dist.py:270: UserWarning: Unknown distribution option: 'test_suite'\n",
+      "        warnings.warn(msg)\n",
+      "      C:\\Users\\how2t\\AppData\\Local\\Temp\\pip-build-env-e18zd744\\overlay\\Lib\\site-packages\\setuptools\\dist.py:493: SetuptoolsDeprecationWarning: Invalid dash-separated options\n",
+      "      !!\n",
+      "      \n",
+      "              ********************************************************************************\n",
+      "              Usage of dash-separated 'build-base' will not be supported in future\n",
+      "              versions. Please use the underscore name 'build_base' instead.\n",
+      "      \n",
+      "              By 2025-Mar-03, you need to update your project and remove deprecated calls\n",
+      "              or your builds will no longer be supported.\n",
+      "      \n",
+      "              See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for details.\n",
+      "              ********************************************************************************\n",
+      "      \n",
+      "      !!\n",
+      "        opt = self.warn_dash_deprecation(opt, section)\n",
+      "      running bdist_wheel\n",
+      "      running build\n",
+      "      running build_py\n",
+      "      creating bin\\lib.win-amd64-cpython-312\n",
+      "      copying python\\brotli.py -> bin\\lib.win-amd64-cpython-312\n",
+      "      running build_ext\n",
+      "      <string>:67: DeprecationWarning: dep_util is Deprecated. Use functions from setuptools instead.\n",
+      "      building '_brotli' extension\n",
+      "      error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  ERROR: Failed building wheel for Brotli\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Building wheel for pycosat (pyproject.toml) did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [1 lines of output]\n",
+      "      error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  ERROR: Failed building wheel for pycosat\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "ERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (Brotli, pycosat)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install archspec==0.2.3 \\\n",
     "asttokens==2.4.1 \\\n",
@@ -62,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import torch\n",
@@ -92,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,18 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checkpoint directory created: ./model\n",
+      "saving model version 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate the MLP modelMLP\n",
     "modelMLP = MLP(width=[784, 10]).to(device)  \n",
-    "modelKAN = KAN(width=[784, 10], grid=3, k=2, seed=42, device=device)  "
+    "modelKAN = KAN(width=[784, 128, 10], grid=3, k=2, seed=42, device=device)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +354,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/1]:  47%|████▋     | 7/15 [12:18<14:19, 107.45s/it]"
+     ]
+    }
+   ],
    "source": [
     "use_amp = torch.cuda.is_available()\n",
     "\n",
@@ -169,7 +374,7 @@
     "test_accuracies_MLP = []\n",
     "test_accuracies_KAN = []\n",
     "\n",
-    "num_epochs = 15\n",
+    "num_epochs = 1\n",
     "\n",
     "train_losses_MLP = []\n",
     "train_losses_KAN = []\n",
