--- a/computerVison_Comparasion/MNIST_comparasion.ipynb
+++ b/computerVison_Comparasion/MNIST_comparasion.ipynb
@@ -334,7 +334,7 @@
    ],
    "source": [
     "# Instantiate the MLP modelMLP\n",
-    "modelMLP = MLP(width=[784, 10]).to(device)  \n",
+    "modelMLP = MLP(width=[784, 8, 10]).to(device)\n",
     "modelKAN = KAN(width=[784, 8, 10], grid=3, k=2, seed=42, device=device)  "
    ]
   },
