--- a/sybmolic_Comparasion/symbolic_Final.ipynb
+++ b/sybmolic_Comparasion/symbolic_Final.ipynb
@@ -254,11 +254,18 @@
     "# 3. Data Generation and Normalization\n",
     "\n",
     "Generate input-output pairs from a given mathematical function, split the data into training/validation/testing sets and normalize them.\n",
+    "\n",
+    "x-> Normalized by subtracting the training set mean and dividing by the training standard deviation\n",
+    "y-> Normalized using MinMaxScaler which scales data fro 0 to 1, scaler is fit on training data and then applied to  the validation and test sets\n",
     "Tested, 1000 samples is enough for representing functions.expl\n",
     "Range of x is -2 to 2\n",
     "Order is shuffled so that the train, validation and test sets are randomized\n",
     "Training 70% data, Validation 15%, Testing 15% sets are created\n",
-    "Than we normalize it "
+    "Than we normalize it \n",
+    "\n",
+    "The numpy arrays are converted to PyTorch tensors and reshaped (using unsqueeze(1)) so that they have the right shape for the network. They are also moved to the chosen device.\n",
+    "\n",
+    "Wraps the training, validation, and test data into PyTorch DataLoader objects to facilitate batching and shuffling during training."
    ]
   },
   {
@@ -645,7 +652,12 @@
    "source": [
     "# 6. Main Training Loop\n",
     "\n",
-    "Use all previously created classes and functions and train both MLP and KAN models on the data generated from each function, evalute"
+    "Use all previously created classes and functions and train both MLP and KAN models on the data generated from each function, evalute\n",
+    "\n",
+    "Residuals -> Difference between an observed value and the value predicted by a model.\n",
+    "             THanks to it we can see in which section and which model preform worst or best\n",
+    "\n",
+    "Histogram of Residuals -> Thanks to it wee can see where is the biggest area with errors"
    ]
   },
   {
