--- a/computerVison_Comparasion/ComputerVision_MNIST.ipynb
+++ b/computerVison_Comparasion/ComputerVision_MNIST.ipynb
@@ -69,6 +69,7 @@
     "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
     "\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -394,6 +395,7 @@
     "            all_labels.extend(labels.cpu().numpy())\n",
     "\n",
     "    cm = confusion_matrix(all_labels, all_preds)\n",
+    "    compute_metrics(cm)\n",
     "    plt.figure(figsize=(8,6))\n",
     "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
     "    plt.title(f\"Confusion Matrix: {model_name}\")\n",
@@ -443,6 +445,81 @@
     "                axes[i].set_title(f'Pred: {preds[i].item()}')\n",
     "                axes[i].axis('off')\n",
     "            break\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def compute_metrics(cm):\n",
+    "        \"\"\"Computes Precision, Recall, and F1-score from a confusion matrix.\"\"\"\n",
+    "        num_classes = cm.shape[0]\n",
+    "        precision = np.zeros(num_classes)\n",
+    "        recall = np.zeros(num_classes)\n",
+    "        f1_score = np.zeros(num_classes)\n",
+    "\n",
+    "        for i in range(num_classes):\n",
+    "            tp = cm[i, i]\n",
+    "            fp = np.sum(cm[:, i]) - tp\n",
+    "            fn = np.sum(cm[i, :]) - tp\n",
+    "            precision[i] = tp / (tp + fp) if (tp + fp) > 0 else 0\n",
+    "            recall[i] = tp / (tp + fn) if (tp + fn) > 0 else 0\n",
+    "            f1_score[i] = 2 * (precision[i] * recall[i]) / (precision[i] + recall[i]) if (precision[i] + recall[i]) > 0 else 0\n",
+    "\n",
+    "        macro_avg = {\n",
+    "            \"Precision\": np.mean(precision),\n",
+    "            \"Recall\": np.mean(recall),\n",
+    "            \"F1-score\": np.mean(f1_score)\n",
+    "        }\n",
+    "\n",
+    "        return precision, recall, f1_score, macro_avg\n",
+    "\n",
+    "\n",
+    "    # ---- Generate Confusion Matrices from Existing Function ----\n",
+    "    cm_mlp = confusion_matrix(all_labels, all_preds_mlp)  # Replace with actual computed labels\n",
+    "    cm_kan = confusion_matrix(all_labels, all_preds_kan)  # Replace with actual computed labels\n",
+    "\n",
+    "    # Compute Precision, Recall, F1-score for each class\n",
+    "    precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
+    "    precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
+    "\n",
+    "    # ---- Create DataFrames for Results ----\n",
+    "    df_metrics = pd.DataFrame({\n",
+    "        \"Class\": range(10),\n",
+    "        \"Precision_MLP\": precision_mlp,\n",
+    "        \"Recall_MLP\": recall_mlp,\n",
+    "        \"F1-score_MLP\": f1_mlp,\n",
+    "        \"Precision_KAN\": precision_kan,\n",
+    "        \"Recall_KAN\": recall_kan,\n",
+    "        \"F1-score_KAN\": f1_kan\n",
+    "    })\n",
+    "\n",
+    "    macro_df = pd.DataFrame({\n",
+    "        \"Metric\": [\"Precision\", \"Recall\", \"F1-score\"],\n",
+    "        \"MLP\": [macro_mlp[\"Precision\"], macro_mlp[\"Recall\"], macro_mlp[\"F1-score\"]],\n",
+    "        \"KAN\": [macro_kan[\"Precision\"], macro_kan[\"Recall\"], macro_kan[\"F1-score\"]]\n",
+    "    })\n",
+    "\n",
+    "    # ---- Print Metrics ----\n",
+    "    print(\"\\nClass-wise Precision, Recall, and F1-score:\")\n",
+    "    print(df_metrics)\n",
+    "    print(\"\\nMacro-averaged Metrics:\")\n",
+    "    print(macro_df)\n",
+    "\n",
+    "    # ---- Plot Precision, Recall, and F1-score for KAN vs MLP ----\n",
+    "    fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
+    "\n",
+    "    metrics = [\"Precision\", \"Recall\", \"F1-score\"]\n",
+    "    mlp_values = [precision_mlp, recall_mlp, f1_mlp]\n",
+    "    kan_values = [precision_kan, recall_kan, f1_kan]\n",
+    "\n",
+    "    for i, metric in enumerate(metrics):\n",
+    "        axes[i].bar(range(10), mlp_values[i], alpha=0.6, label=\"MLP\", color=\"blue\")\n",
+    "        axes[i].bar(range(10), kan_values[i], alpha=0.6, label=\"KAN\", color=\"red\")\n",
+    "        axes[i].set_xlabel(\"Class\")\n",
+    "        axes[i].set_ylabel(metric)\n",
+    "        axes[i].set_title(f\"{metric} Comparison (MLP vs KAN)\")\n",
+    "        axes[i].legend()\n",
+    "        axes[i].grid(True)\n",
+    "\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
     "show_predictions(modelMLP, test_loader)  # Example for MLP\n",
