--- a/sybmolic_Comparasion/symbolic_Final.ipynb
+++ b/sybmolic_Comparasion/symbolic_Final.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "def seed_everything(seed=4):\n",
     "    \"\"\"\n",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,14 +672,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mlp_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m results \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Loop over all defined functions for comparison.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMLP model parameter count:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28msum\u001b[39m(p\u001b[38;5;241m.\u001b[39mnumel() \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmlp_model\u001b[49m\u001b[38;5;241m.\u001b[39mparameters()))\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKAN model parameter count:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28msum\u001b[39m(p\u001b[38;5;241m.\u001b[39mnumel() \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m kan_model\u001b[38;5;241m.\u001b[39mparameters()))\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m func_name, func \u001b[38;5;129;01min\u001b[39;00m functions\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mlp_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "criterion = nn.MSELoss()\n",
     "results = {}\n",
     "\n",
     "# Loop over all defined functions for comparison.\n",
-    "print(\"MLP model parameter count:\", sum(p.numel() for p in mlp_model.parameters()))\n",
-    "print(\"KAN model parameter count:\", sum(p.numel() for p in kan_model.parameters()))\n",
+    "\n",
     "for func_name, func in functions.items():\n",
     "    print(f\"\\nProcessing {func_name}...\")\n",
     "\n",
@@ -681,6 +700,8 @@
     "    # Initialize models and print parameter counts.\n",
     "    mlp_model = MLP().to(device)\n",
     "    kan_model = KAN().to(device)\n",
+    "    print(\"MLP model parameter count:\", sum(p.numel() for p in mlp_model.parameters()))\n",
+    "    print(\"KAN model parameter count:\", sum(p.numel() for p in kan_model.parameters()))\n",
     "\n",
     "    # Set up optimizers.\n",
     "    mlp_optimizer = optim.Adam(mlp_model.parameters(), lr=0.001)\n",
