--- a/computerVison_Comparasion/ComputerVision_MNIST.ipynb
+++ b/computerVison_Comparasion/ComputerVision_MNIST.ipynb
@@ -70,6 +70,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -80,6 +82,7 @@
     "from kan import KAN  # Import your KAN implementation from pykan\n",
     "from tqdm import tqdm\n",
     "from torch.amp import GradScaler\n",
+    "\n",
     "\n",
     "# Decide CPU vs. GPU usage\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -336,7 +339,6 @@
     "def feature_importance(kan_model):\n",
     "    \"\"\"\n",
     "    Sums absolute spline coefficients for the first KAN layer and plots a bar graph.\n",
-    "    WARNING: This depends on the internal KAN structure (here we assume 'layers[0].splines').\n",
     "    \"\"\"\n",
     "    importance = torch.abs(kan_model.act_fun[0].coef).sum(dim=(0, 1))\n",
     "    plt.figure(figsize=(10,4))\n",
@@ -395,13 +397,20 @@
     "            all_labels.extend(labels.cpu().numpy())\n",
     "\n",
     "    cm = confusion_matrix(all_labels, all_preds)\n",
-    "    compute_metrics(cm)\n",
     "    plt.figure(figsize=(8,6))\n",
     "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
     "    plt.title(f\"Confusion Matrix: {model_name}\")\n",
     "    plt.xlabel('Predicted')\n",
     "    plt.ylabel('True')\n",
     "    plt.show()\n",
+    "    \n",
+    "    return cm, all_labels, all_preds\n",
+    "\n",
+    "# Generate confusion matrices and get predictions\n",
+    "cm_mlp, all_labels, all_preds_mlp = plot_confusion_matrix(modelMLP, test_loader, \"MLP\")\n",
+    "cm_kan, _, all_preds_kan = plot_confusion_matrix(modelKAN, test_loader, \"KAN\")\n",
+    "\n",
+    "\n",
     "\n",
     "plot_confusion_matrix(modelMLP, test_loader, \"MLP\")\n",
     "plot_confusion_matrix(modelKAN, test_loader, \"KAN\")\n",
@@ -473,54 +482,55 @@
     "\n",
     "\n",
     "    # ---- Generate Confusion Matrices from Existing Function ----\n",
-    "    cm_mlp = confusion_matrix(all_labels, all_preds_mlp)  # Replace with actual computed labels\n",
-    "    cm_kan = confusion_matrix(all_labels, all_preds_kan)  # Replace with actual computed labels\n",
+    "    # Compute metrics\n",
+    "precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
+    "precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
     "\n",
-    "    # Compute Precision, Recall, F1-score for each class\n",
-    "    precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
-    "    precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
+    "# Compute Precision, Recall, F1-score for each class\n",
+    "precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
+    "precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
     "\n",
-    "    # ---- Create DataFrames for Results ----\n",
-    "    df_metrics = pd.DataFrame({\n",
-    "        \"Class\": range(10),\n",
-    "        \"Precision_MLP\": precision_mlp,\n",
-    "        \"Recall_MLP\": recall_mlp,\n",
-    "        \"F1-score_MLP\": f1_mlp,\n",
-    "        \"Precision_KAN\": precision_kan,\n",
-    "        \"Recall_KAN\": recall_kan,\n",
-    "        \"F1-score_KAN\": f1_kan\n",
-    "    })\n",
+    "# ---- Create DataFrames for Results ----\n",
+    "df_metrics = pd.DataFrame({\n",
+    "    \"Class\": range(10),\n",
+    "    \"Precision_MLP\": precision_mlp,\n",
+    "    \"Recall_MLP\": recall_mlp,\n",
+    "    \"F1-score_MLP\": f1_mlp,\n",
+    "    \"Precision_KAN\": precision_kan,\n",
+    "    \"Recall_KAN\": recall_kan,\n",
+    "    \"F1-score_KAN\": f1_kan\n",
+    "})\n",
     "\n",
-    "    macro_df = pd.DataFrame({\n",
-    "        \"Metric\": [\"Precision\", \"Recall\", \"F1-score\"],\n",
-    "        \"MLP\": [macro_mlp[\"Precision\"], macro_mlp[\"Recall\"], macro_mlp[\"F1-score\"]],\n",
-    "        \"KAN\": [macro_kan[\"Precision\"], macro_kan[\"Recall\"], macro_kan[\"F1-score\"]]\n",
-    "    })\n",
+    "macro_df = pd.DataFrame({\n",
+    "    \"Metric\": [\"Precision\", \"Recall\", \"F1-score\"],\n",
+    "    \"MLP\": [macro_mlp[\"Precision\"], macro_mlp[\"Recall\"], macro_mlp[\"F1-score\"]],\n",
+    "    \"KAN\": [macro_kan[\"Precision\"], macro_kan[\"Recall\"], macro_kan[\"F1-score\"]]\n",
+    "})\n",
     "\n",
-    "    # ---- Print Metrics ----\n",
-    "    print(\"\\nClass-wise Precision, Recall, and F1-score:\")\n",
-    "    print(df_metrics)\n",
-    "    print(\"\\nMacro-averaged Metrics:\")\n",
-    "    print(macro_df)\n",
+    "# ---- Print Metrics ----\n",
+    "print(\"\\nClass-wise Precision, Recall, and F1-score:\")\n",
+    "print(df_metrics)\n",
+    "print(\"\\nMacro-averaged Metrics:\")\n",
+    "print(macro_df)\n",
     "\n",
-    "    # ---- Plot Precision, Recall, and F1-score for KAN vs MLP ----\n",
-    "    fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
+    "# ---- Plot Precision, Recall, and F1-score for KAN vs MLP ----\n",
+    "fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
     "\n",
-    "    metrics = [\"Precision\", \"Recall\", \"F1-score\"]\n",
-    "    mlp_values = [precision_mlp, recall_mlp, f1_mlp]\n",
-    "    kan_values = [precision_kan, recall_kan, f1_kan]\n",
+    "metrics = [\"Precision\", \"Recall\", \"F1-score\"]\n",
+    "mlp_values = [precision_mlp, recall_mlp, f1_mlp]\n",
+    "kan_values = [precision_kan, recall_kan, f1_kan]\n",
     "\n",
-    "    for i, metric in enumerate(metrics):\n",
-    "        axes[i].bar(range(10), mlp_values[i], alpha=0.6, label=\"MLP\", color=\"blue\")\n",
-    "        axes[i].bar(range(10), kan_values[i], alpha=0.6, label=\"KAN\", color=\"red\")\n",
-    "        axes[i].set_xlabel(\"Class\")\n",
-    "        axes[i].set_ylabel(metric)\n",
-    "        axes[i].set_title(f\"{metric} Comparison (MLP vs KAN)\")\n",
-    "        axes[i].legend()\n",
-    "        axes[i].grid(True)\n",
+    "for i, metric in enumerate(metrics):\n",
+    "    axes[i].bar(range(10), mlp_values[i], alpha=0.6, label=\"MLP\", color=\"blue\")\n",
+    "    axes[i].bar(range(10), kan_values[i], alpha=0.6, label=\"KAN\", color=\"red\")\n",
+    "    axes[i].set_xlabel(\"Class\")\n",
+    "    axes[i].set_ylabel(metric)\n",
+    "    axes[i].set_title(f\"{metric} Comparison (MLP vs KAN)\")\n",
+    "    axes[i].legend()\n",
+    "    axes[i].grid(True)\n",
     "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
     "show_predictions(modelMLP, test_loader)  # Example for MLP\n",
     "show_predictions(modelKAN, test_loader)  # Example for KAN"
