--- a/computerVison_Comparasion/ComputerVision_FMNIST.ipynb
+++ b/computerVison_Comparasion/ComputerVision_FMNIST.ipynb
@@ -335,7 +335,6 @@
     "def feature_importance(kan_model):\n",
     "    \"\"\"\n",
     "    Sums absolute spline coefficients for the first KAN layer and plots a bar graph.\n",
-    "    WARNING: This depends on the internal KAN structure (here we assume 'layers[0].splines').\n",
     "    \"\"\"\n",
     "    importance = torch.abs(kan_model.act_fun[0].coef).sum(dim=(0, 1))\n",
     "    plt.figure(figsize=(10,4))\n",
@@ -381,12 +380,6 @@
     "if device.type == 'cuda':\n",
     "    print(f\"GPU Memory Allocated: {torch.cuda.max_memory_allocated() / 1e9:.2f} GB\")\n",
     "\n",
-    "class_names = [\n",
-    "    'T-shirt/Top', 'Trouser', 'Pullover', \n",
-    "    'Dress', 'Coat', 'Sandal', \n",
-    "    'Shirt', 'Sneaker', 'Bag', 'Ankle Boot'\n",
-    "]\n",
-    "\n",
     "def plot_confusion_matrix(model, loader, model_name=\"Model\"):\n",
     "    model.eval()\n",
     "    all_preds = []\n",
@@ -401,12 +394,19 @@
     "\n",
     "    cm = confusion_matrix(all_labels, all_preds)\n",
     "    plt.figure(figsize=(8,6))\n",
-    "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
-    "            xticklabels=class_names, yticklabels=class_names)\n",
+    "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
     "    plt.title(f\"Confusion Matrix: {model_name}\")\n",
     "    plt.xlabel('Predicted')\n",
     "    plt.ylabel('True')\n",
     "    plt.show()\n",
+    "    \n",
+    "    return cm, all_labels, all_preds\n",
+    "\n",
+    "# Generate confusion matrices and get predictions\n",
+    "cm_mlp, all_labels, all_preds_mlp = plot_confusion_matrix(modelMLP, test_loader, \"MLP\")\n",
+    "cm_kan, _, all_preds_kan = plot_confusion_matrix(modelKAN, test_loader, \"KAN\")\n",
+    "\n",
+    "\n",
     "\n",
     "plot_confusion_matrix(modelMLP, test_loader, \"MLP\")\n",
     "plot_confusion_matrix(modelKAN, test_loader, \"KAN\")\n",
@@ -451,6 +451,82 @@
     "                axes[i].axis('off')\n",
     "            break\n",
     "    plt.show()\n",
+    "\n",
+    "\n",
+    "def compute_metrics(cm):\n",
+    "        \"\"\"Computes Precision, Recall, and F1-score from a confusion matrix.\"\"\"\n",
+    "        num_classes = cm.shape[0]\n",
+    "        precision = np.zeros(num_classes)\n",
+    "        recall = np.zeros(num_classes)\n",
+    "        f1_score = np.zeros(num_classes)\n",
+    "\n",
+    "        for i in range(num_classes):\n",
+    "            tp = cm[i, i]\n",
+    "            fp = np.sum(cm[:, i]) - tp\n",
+    "            fn = np.sum(cm[i, :]) - tp\n",
+    "            precision[i] = tp / (tp + fp) if (tp + fp) > 0 else 0\n",
+    "            recall[i] = tp / (tp + fn) if (tp + fn) > 0 else 0\n",
+    "            f1_score[i] = 2 * (precision[i] * recall[i]) / (precision[i] + recall[i]) if (precision[i] + recall[i]) > 0 else 0\n",
+    "\n",
+    "        macro_avg = {\n",
+    "            \"Precision\": np.mean(precision),\n",
+    "            \"Recall\": np.mean(recall),\n",
+    "            \"F1-score\": np.mean(f1_score)\n",
+    "        }\n",
+    "\n",
+    "        return precision, recall, f1_score, macro_avg\n",
+    "\n",
+    "\n",
+    "    # ---- Generate Confusion Matrices from Existing Function ----\n",
+    "    # Compute metrics\n",
+    "precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
+    "precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
+    "\n",
+    "# Compute Precision, Recall, F1-score for each class\n",
+    "precision_mlp, recall_mlp, f1_mlp, macro_mlp = compute_metrics(cm_mlp)\n",
+    "precision_kan, recall_kan, f1_kan, macro_kan = compute_metrics(cm_kan)\n",
+    "\n",
+    "# ---- Create DataFrames for Results ----\n",
+    "df_metrics = pd.DataFrame({\n",
+    "    \"Class\": range(10),\n",
+    "    \"Precision_MLP\": precision_mlp,\n",
+    "    \"Recall_MLP\": recall_mlp,\n",
+    "    \"F1-score_MLP\": f1_mlp,\n",
+    "    \"Precision_KAN\": precision_kan,\n",
+    "    \"Recall_KAN\": recall_kan,\n",
+    "    \"F1-score_KAN\": f1_kan\n",
+    "})\n",
+    "\n",
+    "macro_df = pd.DataFrame({\n",
+    "    \"Metric\": [\"Precision\", \"Recall\", \"F1-score\"],\n",
+    "    \"MLP\": [macro_mlp[\"Precision\"], macro_mlp[\"Recall\"], macro_mlp[\"F1-score\"]],\n",
+    "    \"KAN\": [macro_kan[\"Precision\"], macro_kan[\"Recall\"], macro_kan[\"F1-score\"]]\n",
+    "})\n",
+    "\n",
+    "# ---- Print Metrics ----\n",
+    "print(\"\\nClass-wise Precision, Recall, and F1-score:\")\n",
+    "print(df_metrics)\n",
+    "print(\"\\nMacro-averaged Metrics:\")\n",
+    "print(macro_df)\n",
+    "\n",
+    "# ---- Plot Precision, Recall, and F1-score for KAN vs MLP ----\n",
+    "fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
+    "\n",
+    "metrics = [\"Precision\", \"Recall\", \"F1-score\"]\n",
+    "mlp_values = [precision_mlp, recall_mlp, f1_mlp]\n",
+    "kan_values = [precision_kan, recall_kan, f1_kan]\n",
+    "\n",
+    "for i, metric in enumerate(metrics):\n",
+    "    axes[i].bar(range(10), mlp_values[i], alpha=0.6, label=\"MLP\", color=\"blue\")\n",
+    "    axes[i].bar(range(10), kan_values[i], alpha=0.6, label=\"KAN\", color=\"red\")\n",
+    "    axes[i].set_xlabel(\"Class\")\n",
+    "    axes[i].set_ylabel(metric)\n",
+    "    axes[i].set_title(f\"{metric} Comparison (MLP vs KAN)\")\n",
+    "    axes[i].legend()\n",
+    "    axes[i].grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
     "show_predictions(modelMLP, test_loader)  # Example for MLP\n",
     "show_predictions(modelKAN, test_loader)  # Example for KAN"
