--- a/computerVison_Comparasion/ComputerVision_FMNIST.ipynb
+++ b/computerVison_Comparasion/ComputerVision_FMNIST.ipynb
@@ -69,6 +69,8 @@
     "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
