--- a/computerVison_Comparasion/ComputerVision_MNIST.ipynb
+++ b/computerVison_Comparasion/ComputerVision_MNIST.ipynb
@@ -71,7 +71,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
+    "import math\n",
     "\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
     "test_accuracies_MLP = []\n",
     "test_accuracies_KAN = []\n",
     "\n",
-    "num_epochs = 30  # For quick testing; set higher for better training\n",
+    "num_epochs = 1  # For quick testing; set higher for better training\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    start_time = time.time()\n",
@@ -441,21 +441,48 @@
     "print(f\"MLP FLOPs: {mlp_flops:,}\")\n",
     "print(f\"KAN FLOPs: {kan_flops:,}\")\n",
     "\n",
-    "def show_predictions(model, loader, num_images=5):\n",
-    "    model.eval()\n",
-    "    fig, axes = plt.subplots(1, num_images, figsize=(10, 2))\n",
+    "def show_predictions(modelMLP, modelKAN, loader, num_images=10):\n",
+    "    modelMLP.eval()\n",
+    "    modelKAN.eval()\n",
+    "    \n",
+    "    num_cols = math.ceil(num_images / 2)  # Arrange images into columns\n",
+    "    fig, axes = plt.subplots(3, num_cols, figsize=(2.5 * num_cols, 6))\n",
+    "\n",
     "    with torch.no_grad():\n",
     "        for images, labels in loader:\n",
     "            images = images.to(device)\n",
-    "            outputs = model(images.view(images.size(0), -1))\n",
-    "            _, preds = torch.max(outputs, 1)\n",
+    "            \n",
+    "            # Get predictions for MLP\n",
+    "            outputsMLP = modelMLP(images.view(images.size(0), -1))\n",
+    "            _, predsMLP = torch.max(outputsMLP, 1)\n",
+    "            \n",
+    "            # Get predictions for KAN\n",
+    "            outputsKAN = modelKAN(images.view(images.size(0), -1))\n",
+    "            _, predsKAN = torch.max(outputsKAN, 1)\n",
+    "            \n",
     "            for i in range(num_images):\n",
-    "                axes[i].imshow(images[i].cpu().squeeze(), cmap='gray')\n",
-    "                axes[i].set_title(f'Pred: {preds[i].item()}')\n",
-    "                axes[i].axis('off')\n",
-    "            break\n",
-    "    plt.show()\n",
+    "                col = i % num_cols  # Column position\n",
     "\n",
+    "                # Show the image\n",
+    "                axes[0, col].imshow(images[i].cpu().squeeze(), cmap='gray')\n",
+    "                axes[0, col].axis('off')  # Hide axes\n",
+    "\n",
+    "                # Show MLP prediction below the image\n",
+    "                axes[1, col].clear()\n",
+    "                axes[1, col].text(0.5, 0.5, f'MLP: {predsMLP[i].item()}', \n",
+    "                                  fontsize=12, ha='center', va='center')\n",
+    "                axes[1, col].axis('off')\n",
+    "\n",
+    "                # Show KAN prediction below MLP\n",
+    "                axes[2, col].clear()\n",
+    "                axes[2, col].text(0.5, 0.5, f'KAN: {predsKAN[i].item()}', \n",
+    "                                  fontsize=12, ha='center', va='center')\n",
+    "                axes[2, col].axis('off')\n",
+    "\n",
+    "            break  # Process only the first batch\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "\n",
     "def compute_metrics(cm):\n",
     "        \"\"\"Computes Precision, Recall, and F1-score from a confusion matrix.\"\"\"\n",
@@ -532,8 +559,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "show_predictions(modelMLP, test_loader)  # Example for MLP\n",
-    "show_predictions(modelKAN, test_loader)  # Example for KAN"
+    "show_predictions(modelMLP, modelKAN, test_loader)  # Example for KAN"
    ]
   }
  ],
